# django-openmrs-db

./: LICENSE  README.md  pyproject.toml
openmrs/: models.py
openmrs_db/: admin.py  apps.py  models.py
