[tool.poetry]
name = "django-openmrs-db"
version = "0.1.0"
description = "Django app to connect directly to OpenMRS 2.11+ database"
authors = ["Charl P. Botha <cpbotha@vxlabs.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/cpbotha/django-openmrs-db"
repository = "https://github.com/cpbotha/django-openmrs-db"
keywords = ["django", "openmrs"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
